crates/aranya-policy-lang/tests/snapshots/tests__parse_ffi_decl_error.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Invalid nested option
  |
1 | function foo(x optional optional int, y struct bar) bool
  |                ^^^^^^^^^^^^^^^^^^^^^ Unable to use `optional T` for nested optional types.
  |
help: you should use `option[T]`
  |
1 - function foo(x optional optional int, y struct bar) bool
1 + function foo(x option[option[int]], y struct bar) bool
  |
